<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mixmatic Loop Pad</string>
    <string name="mixmatic">Mixmatic</string>
    <string name="loop_pad">Loop Pad</string>
    <string name="title_activity_launch_pad">Mixmatic Loop Pad</string>
    <string name="unlicensed_message">This app is not properly licensed.  Go to Google Play Store to download a licensed version?</string>
    <string name="unlicensed_retry_message">Unable to verify license.  This is probably due to a network error.  Retry?</string>

    <!-- Main loop pad activity menu -->
    <string name="action_settings">Settings</string>
    <string name="action_edit_mode">Configure touch pads</string>
    <string name="action_play_mode">Exit edit mode</string>
    <string name="action_play_back">Play back mix</string>
    <string name="action_fast_forward">Fast forward</string>
    <string name="action_rewind">Rewind</string>
    <string name="action_save_mix">Export mix as wav</string>

    <!-- Common strings dialog -->
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <!-- Error message strings -->
    <string name="error_sample_load">Error loading sample</string>
    <string name="error_out_of_memory">Out of memory</string>
    <string name="error_file_read">Unable to read file</string>

    <!-- Strings for Sample Edit Activity main menu -->
    <string name="action_trim_wav">Trim to selection</string>
    <string name="action_trim_options">Trim options</string>
    <string name="action_trim_to_sample">Save selection</string>
    <string name="action_edit_beats">Edit beats</string>
    <string name="action_select">Select</string>
    <string name="load_audio_file">New audio file</string>
    <string name="action_wav_edit_options">Waveform options</string>
    <string name="action_resample">Resample</string>

    <!-- Strings for Sample Edit Activity Save dialogs -->
    <string name="dialog_title_check_for_save">Wait a minute &#8230;</string>
    <string name="dialog_message_check_for_save">Do you want to save this sample?</string>
    <string name="sample_name_message">Enter a name for this sample</string>
    <string name="file_exists_message">A sample with this name already exists</string>

    <!-- Strings for new sample popup-->
    <string name="new_sample_popup_title">Create New Sample</string>
    <string name="music_library">Music Library</string>
    <string name="mic_record">Record</string>

    <!-- Strings for beat edit context menu -->
    <string name="action_insert_beat">Insert beat</string>
    <string name="action_remove_beat">Remove beat</string>
    <string name="action_identify_beats">Re-calculate beats</string>
    <string name="action_adjust_tempo">Match global tempo</string>
    <string name="toast_no_beats_found">No beats were detected</string>

    <string name="show_beats">Show beat marks</string>
    <string name="beat_threshold">Beat threshold</string>
    <string name="trim_progress_msg">Trimming</string>
    <string name="save_progress_msg">Preparing sample(s)</string>
    <string name="file_export_msg">Exporting </string>

    <!-- Strings for edit loop pad menu -->
    <string name="action_edit_sample">Edit sample</string>
    <string name="action_load_sample">Load sample</string>
    <string name="action_load_sample_slice">Load sample to slice</string>
    <string name="action_record_sample">Record new sample</string>
    <string name="action_loop_mode">Loop</string>
    <string name="action_launch_mode">Launch mode</string>
    <string name="action_launch_mode_trigger">Trigger</string>
    <string name="action_launch_mode_gate">Gate</string>
    <string name="action_remove_sample">Remove sample</string>
    <string name="action_stop">Stop</string>
    <string name="action_loop_selection">Loop selection</string>
    <string name="action_pick_color">Change color</string>
    <string name="color_dialog_title">Pick a color</string>
    <string name="action_set_volume">Volume</string>
    <string name="action_reset">Reset recording</string>

    <!-- Sample Library Strings -->
    <string name="create_first_sample_msg">Create your first sample</string>

    <!-- Delete sample dialog strings -->
    <string name="remove_sample_dialog_title">Remove sample</string>
    <string name="remove_sample_dialog_message">Are you sure you want to permanently delete this sample?</string>
    <string name="remove_samples_in_use_dialog_message">This sample is in use. Are you sure you want to permanently delete it?</string>
    <string name="no_sample_selected_toast">You must select a sample to delete it</string>
    <string name="sample_deleted_toast">Sample deleted</string>
    <string name="sample_delete_error_toast">Error deleting sample</string>

    <!-- Strings for slicing options dialog -->
    <string name="button_slice_mode_title">Slice</string>
    <string name="slice_multi_select">Select pads to fill</string>
    <string name="slice_selection_error">Please select at least one pad</string>
    <string name="slice_size_warning" formatted="false">Slice into %d slices that are each %.3f seconds in length?</string>
    <string name="sample_size_warning" formatted="false">Sample length is %.3f seconds.\nLarge samples can slow performance.\nProceed with Save?</string>

    <!-- Preference strings -->
    <string name="pref_beat_threshold">Beat detection threshold</string>
    <string name="title_activity_sample_edit_preferences">Preferences</string>
    <string name="pref_bpm">Beats per minute</string>
    <string name="pref_time_signature">Time signature</string>
    <string name="numberpicker_textview">Selected value: </string>

    <!-- Strings for re-sample dialog -->
    <string name="sample_tempo_msg" formatted="false">Sample tempo: %.2f</string>
    <string name="global_tempo_msg" formatted="false">Global tempo: %d</string>
    <string name="resample_suggested_ratio" formatted="false">Suggested ratio to match tempo: %.3f</string>
    <string name="resample_prompt">Resample to match tempo?</string>
    <string name="resample_ratio">Ratio: %.3f</string>
    <string name="resample_positive_button">Resample</string>
    <string name="resample_msg">Re-sampling</string>
    <string name="save_resample_msg">Save sample?</string>

    <!-- Admob ad unit id strings-->
    <string name="sample_edit_banner_ad_id">ca-app-pub-4640479150069852/3320713529</string>
    
    <!-- Facebook app id-->
    <string name="facebook_app_id">753482518050805</string>

</resources>
